--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ transform: translate(-50%, -50%);
 max-width: 100vw;
 max-height: 10vh;
 background-color:#fff;
-font-family:Arial, Helvetica, sans-serif;
+font-family:'Courier New', Courier, monospace;
 color:#042656;
-font-size:40px;
+font-size:30px;
 }
