--- a/style.css
+++ b/style.css
@@ -27,5 +27,6 @@ max-height: 10vh;
 background-color:#fff;
 font-family:'Courier New', Courier, monospace;
 color:#042656;
-font-size:30px;
+font-size:24px;
+font-weight: bold;
 }
